<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="OK">OK</string>
    <string name="User">Username:</string>
    <string name="cancel">Cancel</string>
    <string name="usertext">Please Enter Your Username</string>
    <string name="submit">SUBMIT</string>
    <string name="pass">Password:</string>
    <string name="passhint">Please Enter Your Password</string>
    <string name="passcon">Confirm:</string>
    <string name="passconhint">Please Confirm Your Password</string>
</resources>
